# polygon-test

./: .gitmodules  CMakeLists.txt  Canvas.cpp  Canvas.h  LICENSE.md  Line.cpp  MainWindow.cpp  MainWindow.h  Math.cpp  Math.h  Polygon.cpp  Polygon.h  README.md  Triangulation.cpp  Triangulation.h  VertexDirection.h  polygon_test.pro
src/: AABB.h  Canvas.cpp  Canvas.h  Line.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Polygon.cpp  Polygon.h  Preferences.cpp  Preferences.h  PreferencesWidget.cpp  PreferencesWidget.h  PreferencesWidget.ui  main.cpp
